crates/cash-parser/src/snapshots/cash_parser__word__tests__brace_expansion_parsing.snap
---
source: cash-parser/src/word.rs
expression: "super::parse_brace_expansions(input,\n&options)?.ok_or_else(||\nanyhow::anyhow!(\"Expected brace expansion to be parsed successfully\"))?"
---
[
  Text("x"),
  Expr([
    Child([
      Text("a"),
    ]),
    Child([
      Text("b"),
    ]),
  ]),
  Text("y"),
]
