crates/cash-parser/src/snapshots/cash_parser__word__tests__parse_arithmetic_expansion.snap
---
source: cash-parser/src/word.rs
expression: "test_parse(\"$((0))\")?"
---
ParseTestResults(
  input: "$((0))",
  result: [
    WordPieceWithSource(
      piece: ArithmeticExpression(UnexpandedArithmeticExpr(
        value: "0",
      )),
      start_index: 0,
      end_index: 6,
    ),
  ],
)
