crates/cash-parser/src/snapshots/cash_parser__word__tests__parse_backquoted_command_in_double_quotes.snap
---
source: cash-parser/src/word.rs
expression: "test_parse(r#\"\"`echo hi`\"\"#)?"
---
ParseTestResults(
  input: "\"`echo hi`\"",
  result: [
    WordPieceWithSource(
      piece: DoubleQuotedSequence([
        WordPieceWithSource(
          piece: BackquotedCommandSubstitution("echo hi"),
          start_index: 1,
          end_index: 10,
        ),
      ]),
      start_index: 0,
      end_index: 11,
    ),
  ],
)
