crates/cash-parser/src/snapshots/cash_parser__word__tests__parse_command_sub_with_unbalanced_backtick.snap
---
source: cash-parser/src/word.rs
expression: "test_parse(\"\\\"$(cat <<'EOF'\\na ` b\\nEOF\\n)\\\"\")?"
---
ParseTestResults(
  input: "\"$(cat <<\'EOF\'\na ` b\nEOF\n)\"",
  result: [
    WordPieceWithSource(
      piece: DoubleQuotedSequence([
        WordPieceWithSource(
          piece: CommandSubstitution("cat <<\'EOF\'\na ` b\nEOF\n"),
          start_index: 1,
          end_index: 26,
        ),
      ]),
      start_index: 0,
      end_index: 27,
    ),
  ],
)
